# anatos

./: .gitignore  README.md  REAMDE.md  flake.nix  result
devshells/: default.nix  devshell.nix  flake.nix  flake_side.nix
devshells/fhs/: shell.nix
devshells/fhs/python/: shell.nix
devshells/lib/: FHS-devshell.nix  bash-devshell.nix  fhs-devshell.nix  libs.nix  make-devshell-name.nix  python-zsh-devshell.nix  zsh-devshell.nix  zsh-python-devshell.nix
devshells/shells/: c.nix  java.nix  node.nix  prolog.nix  python.nix  r.nix  rust.nix
devshells/shells/c/: flake.nix
devshells/shells/prolog/: flake.nix
devshells/shells/python/: flake.nix  shell.nix
devshells/shells/rust/: flake.nix
hosts/anatos/: configuration.nix  hardware-configuration.nix  hardware.nix
hosts/nixos_lab/: configuration.nix  hardware.nix
hosts/nixvm/: configuration.nix
hosts/vm/: configuration.nix
modules/devshells/: .zcompdump  .zshrc  flake.nix
modules/home/: default.nix
modules/home/programs/: btop.nix  caffeine.nix  cava.nix  default.nix  git.nix  hyprland.nix  jetbrains-toolbox.nix  kitty.nix  mako.nix  neovim.nix  ollama.nix  rofi.nix  rofimoji.nix  starship.nix  thunar.nix  thunderbird.nix  vscode.nix  waybar.nix  yazi.nix  zathura.nix  zoxide.nix  (+1 more)
modules/system/: default.nix
mypkgs/meteofrance-daemon/release-0.1.0/: daemon.py  default.nix  localization_service.py  main.py  meteofrance_service.py  pyproject.toml  weather_daemon.py
users/anatou/: configuration.nix  home.nix
users/lab/: configuration.nix  home.nix
users/vmuser/: configuration.nix  home.nix
(+57 files in other folders)
